--- a/src/_tile.scss
+++ b/src/_tile.scss
@@ -8,10 +8,6 @@
     box-shadow: 1px 1px 2px 2px black;
     pointer-events: none;
 
-    &.hover {
-        box-shadow: 0 0 5px 5px white;
-    }
-
     &.tile0 {
         background: url('img/first-player.svg') white;
         border-color: white;
